# discord

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: deploy.yml
ci/: deploy.sh
client/: README.md  index.html  package-lock.json  package.json  preview.html
client/blobs/: 0xXhO7gD4Ig3lA9Px9YtbwYi  ENawO9T2ioAR5rvESyq5c97g  WnHDAesFBX-nTrekWD2rA2O5  nIpL8SBckwT9waW8jhg0Uz_7  piMmYS1EBbfm0MV5QsbPQFm5  u3sXT4pyEA9aLTQx_9k3GlbX
client/e2e/: run.mjs  screenshot.mjs  serve.mjs
client/public/: manifest.webmanifest  sw.js  worker.js
client/public/games/: hexgambit.html
client/scripts/: copy-pkg.mjs  gen-icons.mjs  inject-sri.mjs
client/src/: App.jsx  preview.jsx  styles.css
client/src/components/: BootLoader.jsx  CallPanel.jsx  CallStage.jsx  Channels.jsx  CommandPalette.jsx  GameStage.jsx  Masthead.jsx  Members.jsx  Messages.jsx  Modal.jsx  NotificationsPrompt.jsx  Onboarding.jsx  Overview.jsx  Qr.jsx  Rail.jsx  Seal.jsx  Settings.jsx  VoiceMeter.jsx  icons.jsx
client/src/lib/: avatar.js  controller.js  db.js  games.js  history.js  identicon.js  invite.js  link.js  meter.js  notify-prompt.js  overview.js  recovery.js  relay.js  rpc.js  viewTransition.js  voice.js  webauthn.js
client/test/: channels.test.mjs  controller.test.mjs  games.test.mjs  history.test.mjs  link.test.mjs  messages.test.mjs  meter.test.mjs  notify-prompt.test.mjs  overview.test.mjs  view-transition.test.mjs  voice-audio.test.mjs  voice-notify.test.mjs  voice-share.test.mjs  voice-video.test.mjs
crypto-core/: Cargo.toml  README.md  build-wasm.sh
crypto-core/src/: client.rs  lib.rs  wasm.rs
crypto-core/tests/: mls_edge.rs  mls_flow.rs
deploy/: .env.example  Caddyfile  Caddyfile.ip  README.md  docker-compose.edge.yml  docker-compose.tls-ip.yml  docker-compose.tls.yml  docker-compose.turn.yml  reset-db.sh  setup.sh
docs/: BUILD_PLAN.md  ROADMAP.md
docs/mockups/: README.md  game-hub-concepts.html
harness/: README.md  app.js  e2e.mjs  index.html  package-lock.json  package.json  relay.mjs  serve.mjs  worker.js
relay/: Cargo.toml  README.md
relay/src/: account.rs  blobs.rs  lib.rs  main.rs  pg.rs  proto.rs  push.rs  ratelimit.rs  server.rs  store.rs
relay/tests/: account_http.rs  accounts.rs  memory_store.rs  pg_store.rs  push_and_blobs.rs  push_decrypt.rs  reconnect_race.rs  relay_flow.rs  server_edge.rs
