[package]
name = "relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "E2EE chat relay: delivery service and ordered log over opaque MLS blobs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = "2"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
crypto-core = { path = "../crypto-core" }
tokio-tungstenite = "0.24"
