[package]
name = "relay"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "E2EE chat relay: delivery service and ordered log over opaque MLS blobs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
ed25519-dalek = "2"
futures-util = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
p256 = { version = "0.13", features = ["ecdh"] }
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres"] }
thiserror = "2"
web-push = { version = "0.11", default-features = false, features = ["hyper-client"] }
webauthn-rs = "0.5"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
crypto-core = { path = "../crypto-core" }
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
tokio-tungstenite = "0.24"
